--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,13 +14,32 @@
 
           %ul.nav.navbar-nav.pull-xs-right
             %li.nav-item.active
-              = link_to 'Home', home_path, class: 'nav-link'
-            %li.nav-item
-              = link_to 'Features', features_path, class: 'nav-link'
-            %li.nav-item
-              = link_to 'Pricing', pricing_path, class: 'nav-link'
-            %li.nav-item
-              = link_to 'About', about_path, class: 'nav-link'
+              = link_to 'Home', root_path, class: 'nav-link'
+            - if user_signed_in?
+              %li.nav-item
+                = link_to 'Dashboard', edit_user_registration_path, class: 'nav-link'
+              %li.nav-item
+                = link_to 'Logout', destroy_user_session_path, class: 'nav-link', method: :delete
+            - else
+              %li.nav-item
+                = link_to 'Features', features_path, class: 'nav-link'
+              %li.nav-item
+                = link_to 'Pricing', pricing_path, class: 'nav-link'
+              %li.nav-item
+                = link_to 'Login', new_user_session_path, class: 'nav-link'
+              %li.nav-item
+                = link_to 'Sign Up', new_user_registration_path, class: 'nav-link'
+
+    - if notice
+      %div.alert.alert-success
+        %p= notice
+    - if alert
+      %div.alert.alert-danger
+        %p= alert
 
     = yield
+
+    .container
+      %ul
+        %li= link_to 'About', about_path, class: 'nav-link'
     = javascript_include_tag 'application', 'data-turbolinks-track' => 'reload'
