--- a/app/views/blogs/_form.html.haml
+++ b/app/views/blogs/_form.html.haml
@@ -13,5 +13,8 @@
   .field
     = f.label :about
     = f.text_area :about
+  .field
+    = f.label :identifier
+    = f.text_field :identifier
   .actions
     = f.submit 'Save'
