--- a/app/views/blogs/index.html.haml
+++ b/app/views/blogs/index.html.haml
@@ -14,6 +14,7 @@
       %tr
         %td= blog.name
         %td= blog.about
+        %td= link_to 'New Post', new_blog_page_path(blog)
         %td= link_to 'Show', blog
         %td= link_to 'Edit', edit_blog_path(blog)
         %td= link_to 'Destroy', blog, :method => :delete, :data => { :confirm => 'Are you sure?' }
