--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -1,4 +1,11 @@
-= form_for @page do |f|
+- if @page.new_record?
+  - url = blog_pages_path(blog: @blog)
+  - method = :post
+- else
+  - url = blog_page_path(@blog, @page)
+  - method = :patch
+
+= form_for @page, url: url, method: method, as: :page  do |f|
   - if @page.errors.any?
     #error_explanation
       %h2= "#{pluralize(@page.errors.count, "error")} prohibited this page from being saved:"
@@ -6,53 +13,36 @@
         - @page.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
+  %fieldset.form-group
     = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :template_id
-    = f.number_field :template_id
-  .field
-    = f.label :photos_count
-    = f.number_field :photos_count
-  .field
-    = f.label :videos_count
-    = f.number_field :videos_count
-  .field
-    = f.label :content
-    = f.text_area :content
-  .field
-    = f.label :parent_id
-    = f.number_field :parent_id
-  .field
-    = f.label :order
-    = f.number_field :order
-  .field
-    = f.label :header_photo
-    = f.text_area :header_photo
-  .field
-    = f.label :permalink
-    = f.text_field :permalink
-  .field
-    = f.label :allow_comments
-    = f.check_box :allow_comments
-  .field
-    = f.label :disqus_identifier
-    = f.text_field :disqus_identifier
-  .field
-    = f.label :blog_id
-    = f.number_field :blog_id
-  .field
-    = f.label :type
-    = f.text_field :type
-  .field
-    = f.label :cached_content
-    = f.text_area :cached_content
-  .field
-    = f.label :published_at
-    = f.datetime_select :published_at
-  .field
+    = f.text_field :title, class: 'form-control'
+  %fieldset.form-group
     = f.label :short_description
-    = f.text_area :short_description
-  .actions
+    = f.text_area :short_description, class: 'form-control'
+  %fieldset.form-group
+    = f.label :permalink
+    = f.text_field :permalink, class: 'form-control'
+  %fieldset.form-group
+    = f.label :content
+    = f.text_area :content, class: 'form-control'
+  -# .field
+  -#   = f.label :parent_id
+  -#   = f.number_field :parent_id
+  -# .field
+  -#   = f.label :order
+  -#   = f.number_field :order
+  -# .field
+  -#   = f.label :header_photo
+  -#   = f.text_area :header_photo
+  %fieldset.form-group
+    = f.label :allow_comments
+    = f.check_box :allow_comments, class: 'form-control'
+  %fieldset.form-group
+    = f.label :disqus_identifier
+    = f.text_field :disqus_identifier, class: 'form-control'
+  %fieldset.form-group
+    = f.label :published_at
+    = f.datetime_select :published_at, class: 'form-control'
+
+  %fieldset.form-group
     = f.submit 'Save'
